[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mimo-sdk"
version = "0.1.0"
description = "Pythonic SDK for Xiaomi MiMo — chat, vision, TTS, streaming, agentic. OpenAI-compatible drop-in."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "amilaa-0" }]
keywords = ["xiaomi", "mimo", "llm", "openai", "ai", "tts", "vision", "agentic", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "typing_extensions>=4.8; python_version < '3.11'",
]

[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=13.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]
all = ["mimo-sdk[cli,dev]"]

[project.scripts]
mimo = "mimo.cli:app"

[project.urls]
Homepage = "https://github.com/amilaa-0/mimo-sdk-py"
Documentation = "https://github.com/amilaa-0/mimo-sdk-py#readme"
Repository = "https://github.com/amilaa-0/mimo-sdk-py"
Issues = "https://github.com/amilaa-0/mimo-sdk-py/issues"
"Xiaomi MiMo Console" = "https://platform.xiaomimimo.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo"]

[tool.hatch.build.targets.sdist]
include = ["src/mimo", "README.md", "LICENSE", "examples", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RET"]
# The SDK targets Python 3.9, so we keep ``Optional[X]`` / ``List[X]`` etc.
# rather than chasing the newer ``X | Y`` and ``list[X]`` forms.
ignore = ["E501", "UP006", "UP007", "UP035", "UP045", "SIM108"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic API uses function calls in argument defaults.
"src/mimo/cli.py" = ["B008"]
# example scripts intentionally omit ``__future__`` boilerplate in places.
"examples/*.py" = ["B007", "B008", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
